2010-07-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamewin.cc, exult.cc, keys.cc: fixed bug #3011719  avatar can do stuff
	  while passed out. The player will be unable to do almost anything (similar
	  to the originals) if the avatar is asleep, unconscious, paralyzed or dead.
	  As a rule, cheat and mapedit actions are still allowed in these cases, and
	  hackmove allows dragging even in these conditions. Also, purely interface
	  actions will also work -- like esc, scrolling the map with the mouse wheel
	  and so on.
	* configure.ac: AC_PATH_XTRA is actually causing linking problems in Ubuntu
	  Karmic, so it has been removed (again).
	* Others: Eliminated a few warnings.

2010-07-26	Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.ac: Don't expand AC_PATH_XTRA in a conditional. This broke
      configure on all platforms other than linux.

2010-07-25	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* configure.ac: Added AC_PATH_XTRA macro to fix compilation problems in some
	  Debian and Debian-based distros. Properly quoting text.
	* audio/*: Fixing bug #3016448 -- load_timbres() was being called when it
	  should not, and caused music to stop.

2010-04-19	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* audio/Midi.cc: Fixed regression that caused timbres to not be uploaded
	  when changing audio options. Also, ensure correct timbres are loaded when
	  a song is started.
	* audio/Audio.cc: SFX cache is completelly flushed now when changing the
	  SFX packages, so that all SFX from the new package will be used effective
	  immediately (instead of requiring Exult to be restarted).

2010-04-17	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Patches applied:
	  #2843338 Use official min/max functions instead of proprietary ones
	  #2975693 fix for bug, Walking speed doesn't change to reflect fps

2010-04-12	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Bugs fixed:
	  #1500917 --disable-mt32emu doesn't disable building mt32emu